--- a/widget/html/history.html
+++ b/widget/html/history.html
@@ -111,9 +111,7 @@ apiready = function() {
     type = api.pageParam.type;
     if (type == "modi") {
         history_id = api.pageParam.history_id;
-        data = getHistory(history_id);
-        patient_id = data.patient_pointer;
-        physical_id = data.physical_pointer;
+        getHistory(history_id);
     }
 
     // 新增患者信息，本页面需要知道patient_id
@@ -136,6 +134,42 @@ apiready = function() {
 }
 
 /**
+ * [getHistory description]
+ * @param  {[type]} history_id [description]
+ * @return {[type]}            [description]
+ */
+function getHistory(history_id) {
+    showProgress();
+    model = api.require('model');
+    query = api.require('query');
+    model.config({
+        appId: 'A6903478274381',
+        appKey: '460A4799-0424-A29B-6809-F06FDF1D888F',
+        host: 'https://d.apicloud.com'
+    });
+    query.createQuery(function(ret, err) {
+        if (ret && ret.qid) {
+            model.findById({
+                class: "caseHistory",
+                id: history_id
+            }, function(ret, err) {
+                if (err) {
+                    hideProgress();
+                    alert(JSON.stringify(err));
+                } else {
+                    if (ret) {
+                        hideProgress();
+                        setHistory(ret);
+                        patient_id = ret.patient_pointer;
+                        physical_id = ret.physical_pointer;
+                    }
+                }
+            });
+        }
+    });
+}
+
+/**
  * [saveHistory 保存病历信息]
  * @return {[type]} [description]
  */
@@ -143,6 +177,7 @@ function saveHistory() {
     showProgress();
     if (patient_id == undefined || patient_id == null || patient_id == "") {
         alert("请首先新增患者信息");
+        hideProgress();
         return;
     }
 
