修复patient和physical新增成功卡在loading界面bug，改变主页色调，减小input到67，解决iphone5显示问题

--- a/widget/html/physical.html
+++ b/widget/html/physical.html
@@ -291,6 +291,8 @@ function savePhysical() {
                         }
                     });
                 }
+                hideProgress();
+                api.closeWin();
             } else {
                 alert("新增体检信息失败！" + JSON.stringify(err));
                 hideProgress();
