增加viewFullHistory，一屏展示所有病历信息，似乎和修改页面很好的区分开来了

--- a/widget/html/patient.html
+++ b/widget/html/patient.html
@@ -162,7 +162,7 @@ function savePatient() {
 
     showProgress();
 
-    if (patient_id != "") {
+    if (patient_id != "" && patient_id != undefined && patient_id != null) {
         model.updateById({
             class: 'patient',
             id: patient_id,
