设置全量浏览页面随访不可修改

--- a/widget/html/viewFullHistory.html
+++ b/widget/html/viewFullHistory.html
@@ -232,6 +232,7 @@ apiready = function() {
     $api.attr($api.byId('diagnosis'), 'readonly', 'true');
     $api.attr($api.byId('chief_complaint'), 'readonly', 'true');
     $api.attr($api.byId('treatment'), 'readonly', 'true');
+    $api.attr($api.byId('follow_up'), 'readonly', 'true');
 
     $api.attr($api.byId('name'), 'readonly', 'true');
     $api.attr($api.byId('gender'), 'readonly', 'true');
