实现了随访列表及修改页面的新增、修改、删除，查看页面待编码

--- a/widget/historyList.html
+++ b/widget/historyList.html
@@ -17,6 +17,10 @@
         /*color: #FFF;*/
     }
 
+    body {
+        background-color: #B1A686;
+    }
+
     .top-button {
         /*margin: 0 1em;*/
         text-align: center;
