实现随访查看页面

--- a/widget/html/followupList.html
+++ b/widget/html/followupList.html
@@ -190,7 +190,7 @@ function reloadList(data) {
 function viewFollowUp(index) {
     api.openWin({
         name: "followup",
-        url: './viweFollowUp.html',
+        url: './viewFollowUp.html',
         pageParam: {
             history_id: history_id,
             follow_up: follow_up,
