找到随访浏览页面不反显的原因，修复患者生日选择问题

--- a/widget/html/followupList.html
+++ b/widget/html/followupList.html
@@ -115,7 +115,7 @@ apiready = function() {
             followupList.getDataByIndex({
                 index: ret.index
             }, function(ret, err) {
-                viewFollowUp(ret.data, index, history_id);
+                viewFollowUp(index);
             });
         }
 
