--- a/widget/html/patient.html
+++ b/widget/html/patient.html
@@ -39,7 +39,7 @@
                         <input type="text" id="gender" />
                     </div>
                 </div>
-                <div class="field" onclick="openPicker('birthday');">
+                <div class="field" onclick="openPicker('date');">
                     <div class="key">出生日期:</div>
                     <div class="value">
                         <input type="text" id="birthday" />
